adds answer to C

--- a/Assignment_3_DS.tex
+++ b/Assignment_3_DS.tex
@@ -98,6 +98,8 @@ int gcd (int m, int n)
 }
     \end{lstlisting}
     
+    \item[answer:] This code runs $nlog(n)$ times.
+    
     %%%%%%%%%%%%%%%
     
     \item[d.]
