updates formatting for research night proposal

--- a/Research_Night_Proposal.tex
+++ b/Research_Night_Proposal.tex
@@ -1,7 +1,9 @@
 \documentclass{article}
-\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage[margin=.5in]{geometry}
+\usepackage{titling}
 
+\setlength{\droptitle}{-5em}
 \title{Research Night Proposal}
 \author{Harry Haisty}
 \date{January 2019}
